--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="bootstrap.min.css">
 
-    <title>React App</title>
+    <title>Bookshop</title>
   </head>
   <body>
     <div id="root"></div>
